--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-fs": "~2",
     "@tauri-apps/plugin-opener": "^2",
-    "@tauri-apps/plugin-shell": "~2"
+    "@tauri-apps/plugin-shell": "~2",
+    "pretty-bytes": "^6.1.1"
   },
   "devDependencies": {
     "@sveltejs/adapter-static": "^3.0.6",
